# voice-ai-models

./: .gitignore  README.md
asr/: PARAKEET_IMPLEMENTATION_SUMMARY.md  README.md  REQUIREMENTS_UPDATE_SUMMARY.md
asr/benchmark/: .env.example  Makefile  README.md
asr/benchmark/api/: requirements.txt  ytl_api_test.py  ytl_api_test_single.py
asr/benchmark/common/: __init__.py  api_config.py  datasets.py  evaluation.py  normalizer.py  requirements.txt  utils.py
asr/benchmark/parakeet/: requirements.txt  ytl_parakeet_test.py  ytl_parakeet_test_single.py
asr/benchmark/scripts/: prepare_aishell2.py  prepare_childmandarin.py  prepare_chinese_lips.py  prepare_kespeech.py  prepare_supa.py  prepare_test_data.py  prepare_ytl_testsets.py  run_all_benchmarks.py
asr/benchmark/test_data/: requirements.txt
asr/benchmark/whisper/: requirements.txt  ytl_faster_whisper_test.py  ytl_mesolitica_whisper_test.py
asr/docs/: 00_QUICK_START.md  01_PRD_Product_Requirements.md  03_Data_Preparation_Guide.md  04_Training_Strategy_Guide.md  05_Evaluation_Methodology.md  06_Deployment_Guide.md  07_Project_Execution_Plan.md  08_Shared_Data_Strategy.md  09_Data_Collection_Quickstart.md
asr/eval/: CLEANING_PREDICTIONS.md  FIX_FLASH_ATTENTION.md  FIX_TORCH_ISSUE.md  FIX_TORCH_VERSION_ISSUE.md  QWEN25_OMNI_FINAL.md  QWEN25_OMNI_FIX.md  QWEN25_OMNI_SETUP.md  README.md  analyze_comparison.py  batch_evaluate.py  clean_predictions.py  compare_models.py  dataset_loader.py  datasets_config.py  debug_merge.py  debug_wer.py  download_hf_dataset.py  evaluate.py  fix_predictions.py  pyproject.toml  requirements.txt  run_batch_eval.sh  setup_env.sh  test_hyphen_fix.py  test_installation.py  test_repetition_fix.py
asr/eval/calculate_metrics/: analyze_results.py  calculate_metrics.py
asr/eval/ncspeech/: pyproject.toml  ytl_stt_test.py  ytl_stt_test2.py
asr/eval/outputs-meso/: comparison_4models.json
asr/eval/outputs-meso/Parakeet_final_model.nemo_malaya-malay-test-set_auto_20251109_114531/: config.json  evaluation_results.json  evaluation_summary.csv  predictions.csv  predictions.json
asr/eval/outputs-meso/Parakeet_parakeet-tdt-0.6b-v3_malaya-malay-test-set_auto_20251109_114316/: config.json  evaluation_results.json  evaluation_summary.csv  predictions.csv  predictions.json
asr/eval/outputs-meso/Whisper_Malaysian-whisper-large-v3-turbo-v3_malaya-malay-test-set_auto_20251109_113429.BAD_hallucination/: config.json  evaluation_results.json  evaluation_summary.csv  predictions.csv  predictions.json
asr/eval/outputs-meso/Whisper_Malaysian-whisper-large-v3-turbo-v3_malaya-malay-test-set_auto_20251109_151030/: config.json
asr/eval/outputs-meso/Whisper_Malaysian-whisper-large-v3-turbo-v3_malaya-malay-test-set_auto_20251109_151218/: config.json
asr/eval/outputs-meso/Whisper_Malaysian-whisper-large-v3-turbo-v3_malaya-malay-test-set_auto_20251109_151940/: config.json  evaluation_results.json  evaluation_summary.csv  predictions.csv  predictions.json
asr/eval/outputs-meso/Whisper_whisper-large-v3-turbo_malaya-malay-test-set_auto_20251109_112827.OLD/: config.json  evaluation_results.json  evaluation_summary.csv  predictions.csv  predictions.json
asr/eval/outputs-meso/Whisper_whisper-large-v3-turbo_malaya-malay-test-set_auto_20251109_151157/: config.json  predictions.json
asr/eval/outputs-meso/Whisper_whisper-large-v3-turbo_malaya-malay-test-set_auto_20251109_151307/: config.json  evaluation_results.json  evaluation_summary.csv  predictions.csv  predictions.json
asr/eval/outputs-meso/analysis_4models/: comparison_report.md  detailed_comparison.csv  summary_metrics.csv
asr/eval/test_data/YTL_testsets/: fleurs_test.tsv  malay_conversational_meta.tsv  malay_scripted_meta.tsv
asr/eval/test_data/malaya-test/: malaya-malay-test-set.json
asr/eval/test_data/seacrowd-malcsc/: AUDIOINFO.txt  DATASET_INFO.md  README.txt  SPKINFO.txt  prepare_dataset.py  seacrowd_malcsc.json
asr/eval/test_data/seacrowd-malcsc/TXT/: A0004_S008_0_G0369.txt  A0004_S008_0_G0489.txt  A0006_S001_0_G0216.txt  A0006_S001_0_G0712.txt  A0006_S002_0_G0216.txt  A0006_S002_0_G0712.txt  A0008_S003_0_G0397.txt  A0008_S003_0_G0598.txt  A0008_S004_0_G0397.txt  A0008_S004_0_G0598.txt  A0008_S005_0_G0397.txt  A0008_S005_0_G0598.txt  A0009_S004_0_G0474.txt  A0009_S004_0_G0591.txt  A0009_S008_0_G0474.txt  A0009_S008_0_G0591.txt  A0010_S001_0_G0521.txt  A0010_S001_0_G0626.txt  A0010_S002_0_G0521.txt  A0010_S002_0_G0626.txt
asr/eval/test_data/ytl-malay-test/: asr_ground_truths.csv  asr_ground_truths.json
asr/eval/transcribe/: PARAKEET_COMMANDS.sh  QWEN25OMNI_COMMANDS.sh  transcribe_paraformer.py  transcribe_parakeet.py  transcribe_qwen25omni.py  transcribe_qwen2audio.py  transcribe_qwen3omni.py  transcribe_whisper.py  utils.py
asr/synthetic_data_generation/: .gitignore  README.md  config.yaml  config_parakeet_training.yaml  generate_incremental.sh  requirements.txt  run_pipeline.sh
asr/synthetic_data_generation/data_sources/: malaysian_historical.json  malaysian_politicians.json  number_patterns.json
asr/synthetic_data_generation/scripts/: generate_sentences.py  number_to_malay.py  patch_audio_paths.py  prepare_nemo_manifest.py  synthesize_with_elevenlabs.py
asr/synthetic_data_generation/sentence_templates/: mixed_templates_malay.json  (+2 more)
asr/train/: FRESH_INSTALL_GUIDE.md  Makefile  PYTHON_VERSION_GUIDE.md  README.md  TRAINING_CONFIG_STANDARD.md  requirements.txt  setup_clean_env.sh  setup_env.sh
tts/docs/: 00_QUICK_START.md  01_PRD_Product_Requirements.md  01_PRD_Product_Requirements.md.backup  03_Data_Preparation_Guide.md  04_Training_Strategy_Guide.md  05_Evaluation_Methodology.md  06_Deployment_Guide.md  07_Project_Execution_Plan.md  08_Scalability_Notes.md
tts/eval/: batch_evaluate.py  datasets_config.py  evaluate.py  pyproject.toml  requirements.txt
tts/eval/calculate_metrics/: __init__.py  calculate_metrics.py
tts/eval/synthesize/: __init__.py  synthesize_glmtts.py  synthesize_kokoro.py  synthesize_melotts.py  synthesize_xtts.py  utils.py
tts/synthetic_data_generation/: config.yaml  requirements.txt  run_pipeline.sh
(+195 files in other folders)
