[project]
name = "ytl-asr-test"
version = "0.1.0"
description = "YTL ASR API testing and evaluation"
requires-python = ">=3.10,<3.12"

dependencies = [
    # OpenAI client for YTL ASR API
    "openai>=1.0.0",
    
    # Data processing
    "pandas>=2.0.0,<2.3.0",
    "tqdm>=4.65.0,<5.0.0",
    
    # Malay NLP processing
    "malaya>=5.1.0",
    
    # Evaluation metrics
    "torchmetrics>=1.0.0",
    
    # PyTorch (for torchmetrics)
    "torch>=2.0.0",
    
    # HuggingFace models (for local ASR)
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

